# az-ai-scaffolding-test-l300

./: README.md  azure.yaml  pyproject.toml
infra/: main.bicep
scripts/: oauth2PermissionScopes.json  preprovision.sh
src/aigbb-scaffolding-core/: README.md  pyproject.toml
src/aigbb-scaffolding-core/src/aigbb_scaffolding_core/: __init__.py
src/aigbb-scaffolding-core/tests/: test_hello.py
src/az-ai-scaffolding-core/: README.md  pyproject.toml
src/az-ai-scaffolding-core/src/az_ai_scaffolding_core/: __init__.py
src/az-ai-scaffolding-core/tests/: test_hello.py
src/backend/: Dockerfile  pyproject.toml
src/frontend/: Dockerfile  app.py  pyproject.toml
