[project]
name = "aigbb_scaffolding_test_l300"
version = "0.1.0"
description = "Solution generated with the AI GBB Scaffolding tool test (l300)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv >=1.0.1,<1.2.0",
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
]
