# Main pyproject.toml file for the project
# See https://docs.astral.sh/uv/concepts/projects/layout/ for more information
[project]
name = "aigbb_scaffolding_test_l300"
version = "0.1.0"
description = "Solution generated with the AI GBB Scaffolding tool test (l300)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv >=1.0.1,<1.2.0",
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
]

[tool.uv.workspace]
members = ["src/*"]
# exclude = ["src/excluded-package"]

[tool.uv.sources]
aigbb-scaffolding-core = { workspace = true }

[tool.pytest.ini_options]
#addopts = "-ra --cov"
addopts = "-ra"
pythonpath = ["src"]
