[project]
name = "frontend"
version = "0.1.0"
description = "Solution generated with the AI GBB Scaffolding tool test (l300) - Frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit ~=1.41.1",
    "requests ~=2.32.3",
    "azure-identity ~=1.19.0",
    "python-dotenv ~=1.0.1",
    "aigbb-scaffolding-core",
]
